# UP-GenAI

./: .env  .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh  workshop.ipynb  workshop_answers.ipynb
UPGen/: pyvenv.cfg
UPGen/Scripts/: activate  activate.bat
