[tool.poetry]
name = "up-gen-ai"
package-mode = false
version = "1.0.0"
description = "University Presence Generative AI Use Case - Creating a local RAG using langchain."
authors = ["Roberto Navarro <r.navarro.san.martin@accenture.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "0.2.11"
langchain-core = "0.2.25"
langchain-community = "0.2.10"
langchain-openai = "0.1.19"
"pdfminer.six" = "*"
ipykernel = "6.29.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"